@@ -1,5 +1,14 @@
 2000-08-27  Werner Almesberger  <Werner.Almesberger@epfl.ch>
 
+        * libc/posix/scandir.c (DIRSIZ, scandir): use struct dirent.d_namlen
+        only if _DIRENT_HAVE_D_NAMLEN is defined.
+        (alphasort): aligned prototype with
+        libc/sys/cygwin/sys/dirent.h and simplified function body.
+        * libc/posix/telldir.c (telldir): changed "telldir" prototype to
+        long telldir (DIR *) as mentioned in annex B of POSIX.1
+
+2000-08-27  Werner Almesberger  <Werner.Almesberger@epfl.ch>
+
         * libc/machine/i386/i386mach.h: added SOTYPE_FUNCTION to set type
         of global entry points if _I386MACH_NEED_SOTYPE_FUNCTION is defined;
         Added __CLI and __STI macros (controlled via
